# nekrotrace

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
scripts/: build-server.sh  gen-ico.js
src/: app.css  app.html
src-core/: Cargo.toml
src-core/src/: lib.rs
src-server/: Cargo.toml
src-server/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs  network_engine.rs
src/lib/: api.js  stores.js
src/lib/components/: Chart.svelte  GraphView.svelte  HopList.svelte  InputBar.svelte  MonitoringView.svelte
src/routes/: +layout.svelte  +page.svelte
