[package]
name = "nekrotrace-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dns-lookup = "2.0.5"
futures = "0.3"
tokio-stream = "0.1.15"
thiserror = "1.0"
once_cell = "1.19"
async-trait = "0.1"

[target.'cfg(not(windows))'.dependencies]
traceroute = "0.1.1"
