[package]
name = "nekrotrace"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.5.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dns-lookup = "2.0.5"
futures = "0.3"
tokio-stream = "0.1.15"
thiserror = "1.0"
once_cell = "1.19"

[features]
default = []

[target.'cfg(not(windows))'.dependencies]
traceroute = "0.1.1"
