[package]
name = "nekrotrace"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.5.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
nekrotrace-core = { path = "../src-core" }
async-trait = "0.1"


[features]
default = []

